--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,65 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.card-container {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  margin: 3rem auto;
+}
+
+.card {
+  margin: 1rem auto;
+  margin-right: 1rem;
+}
+
+.card div {
+  margin: .3rem auto;
+}
+
+.card button {
+  margin: .2rem;
+  border: none;
+  background-color: aqua;
+  box-shadow: 1px 2px;
+}
+
+.nav-bar {
+  display: flex;
+  justify-content: center;
+  background-color: blueviolet;
+}
+
+.nav-bar div {
+  margin: 1rem;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-size: larger;
+}
+
+.nav-bar div:Link {
+  color:rgb(232, 233, 233);
+  background-color: aquamarine;
+  
+}
+
+#link {
+  color: rgb(232, 233, 233);
+}
+
+.c-btn button {
+  margin: .5rem;
+  background-color: aqua;
+  box-shadow: 1px 2px;
+}
+
+#sort {
+  margin-right: 1rem;
+  font-size: large;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+#filter-input {
+  text-align: center;
+}
